--- a/templates/index.html
+++ b/templates/index.html
@@ -1,164 +1,34 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>마이 페이보릿 무비스타 | 프론트-백엔드 연결 마지막 예제!</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"/>
-        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-        <style>
-            .center {
-                text-align: center;
-            }
 
-            .star-list {
-                width: 500px;
-                margin: 20px auto 0 auto;
-            }
+        <!-- Webpage Title -->
+        <title>Home | SWEETER</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
-            .star-name {
-                display: inline-block;
-            }
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            .star-name:hover {
-                text-decoration: underline;
-            }
+        <!-- Bulma CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+        <!-- Font Awesome CSS -->
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-            .card {
-                margin-bottom: 15px;
-            }
-        </style>
-        <script>
-            $(document).ready(function () {
-                showStar();
-            });
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Stylish&display=swap" rel="stylesheet">
+        <link href="{{ url_for('static', filename='mystyle.css') }}" rel="stylesheet">
 
-            function showStar() {
-                $.ajax({
-                    type: 'GET',
-                    url: '/api/list?sample_give=샘플데이터',
-                    data: {},
-                    success: function (response) {
-                        let movieStar = response['movie_stars']
-                        for(let i = 0; i < movieStar.length; i++){
-                            let name = movieStar[i]['name']
-                            let url = movieStar[i]['url']
-                            let recent = movieStar[i]['recent']
-                            let img_url = movieStar[i]['img_url']
-                            let like = movieStar[i]['like']
-
-                            let temp_html = `<div class="card">
-                                                <div class="card-content">
-                                                    <div class="media">
-                                                        <div class="media-left">
-                                                            <figure class="image is-48x48">
-                                                                <img
-                                                                        src="${img_url}"
-                                                                        alt="Placeholder image"
-                                                                />
-                                                            </figure>
-                                                        </div>
-                                                        <div class="media-content">
-                                                            <a href="${url}" target="_blank" class="star-name title is-4">${name} (좋아요: ${like})</a>
-                                                            <p class="subtitle is-6">${recent}</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <footer class="card-footer">
-                                                    <a href="#" onclick="likeStar('${name}')" class="card-footer-item has-text-info">
-                                                        위로!
-                                                        <span class="icon">
-                                              <i class="fas fa-thumbs-up"></i>
-                                            </span>
-                                                    </a>
-                                                    <a href="#" onclick="deleteStar('${name}')" class="card-footer-item has-text-danger">
-                                                        삭제
-                                                        <span class="icon">
-                                              <i class="fas fa-ban"></i>
-                                            </span>
-                                                    </a>
-                                                </footer>
-                                            </div>`
-
-                            $('#star-box').append(temp_html)
-                        }
-                    }
-                });
-            }
-
-            function likeStar(name) {
-                $.ajax({
-                    type: 'POST',
-                    url: '/api/like',
-                    data: {name_give:name},
-                    success: function (response) {
-                        alert(response['msg']);
-                        window.location.reload();
-                    }
-                });
-            }
-
-            function deleteStar(name) {
-                $.ajax({
-                    type: 'POST',
-                    url: '/api/delete',
-                    data: {name_give: name},
-                    success: function (response) {
-                        alert(response['msg']);
-                        window.location.reload();
-                    }
-                });
-            }
-
-        </script>
+        <!-- JS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+        <script src="{{ url_for('static', filename='myjs.js') }}"></script>
     </head>
+
+
     <body>
-        <section class="hero is-warning">
-            <div class="hero-body">
-                <div class="container center">
-                    <h1 class="title">
-                        마이 페이보릿 무비스타😆
-                    </h1>
-                    <h2 class="subtitle">
-                        순위를 매겨봅시다
-                    </h2>
-                </div>
-            </div>
-        </section>
-        <div class="star-list" id="star-box">
-            <div class="card">
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-left">
-                            <figure class="image is-48x48">
-                                <img
-                                        src="https://search.pstatic.net/common/?src=https%3A%2F%2Fssl.pstatic.net%2Fsstatic%2Fpeople%2Fportrait%2F201807%2F20180731143610623-6213324.jpg&type=u120_150&quality=95"
-                                        alt="Placeholder image"
-                                />
-                            </figure>
-                        </div>
-                        <div class="media-content">
-                            <a href="#" target="_blank" class="star-name title is-4">김다미 (좋아요: 3)</a>
-                            <p class="subtitle is-6">안녕, 나의 소울메이트(가제)</p>
-                        </div>
-                    </div>
-                </div>
-                <footer class="card-footer">
-                    <a href="#" onclick="likeStar('김다미')" class="card-footer-item has-text-info">
-                        위로!
-                        <span class="icon">
-              <i class="fas fa-thumbs-up"></i>
-            </span>
-                    </a>
-                    <a href="#" onclick="deleteStar('김다미')" class="card-footer-item has-text-danger">
-                        삭제
-                        <span class="icon">
-              <i class="fas fa-ban"></i>
-            </span>
-                    </a>
-                </footer>
-            </div>
-        </div>
+        <h2>책리뷰 구현</h2>
+        <button type="button" onClick="location.href='/login'">회원가입
     </body>
 </html>
