--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -26,9 +26,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!--  css & js -->
-    <link rel="stylesheet" href="../static/css/login.css"/>
-    <script defer src="../static/js/login.js"></script>
-
+    <link rel="stylesheet" href="../static/css/joinMem.css"/>
+    <script defer src="../static/js/joinMem.js"></script>
 
     <link rel="icon" href="../static/image/book_logo.png"/>
 
@@ -56,23 +55,22 @@
         </div>
     </div>
 
-    <!-- login -->
-    <div class="login-form">
-        <p>모두의 책 리뷰에 오신 것을 환영합니다.</p>
+    <div class="join-form">
+        <p class="title">모두의 책 리뷰에 오신 것을 환영합니다.</p>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요."/>
         </div>
+        <p id="wrongId"></p>
         <div id="pw">
             <input type="password" placeholder="비밀번호를 입력해주세요."/>
         </div>
-
-        <button id="login">로그인</button>
-
-        <div class="login_bottom">
-            <a href="/joinMem">회원가입</a>
-            <a href="javascript:void(0)">아이디찾기</a>
-            <a href="javascript:void(0)">비밀번호찾기</a>
+        <div id="pw_again">
+            <input type="password" placeholder="비밀번호를 입력해주세요."/>
         </div>
+        <p id="wrongPw"></p>
+        <a href="/login">
+            <button id="join">회원가입</button>
+        </a>
     </div>
 
 </body>
