--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -58,19 +58,21 @@
     <div class="join-form">
         <p class="title">모두의 책 리뷰에 오신 것을 환영합니다.</p>
         <div id="id">
-            <input type="text" placeholder="아이디를 입력해주세요."/>
+            <input type="text" placeholder="아이디를 입력해주세요." id="user_id" autocomplete="off"/>
         </div>
         <p id="wrongId"></p>
+        <hr>
         <div id="pw">
-            <input type="password" placeholder="비밀번호를 입력해주세요."/>
+            <input type="password" placeholder="비밀번호를 입력해주세요." id="user_pw"/>
         </div>
         <div id="pw_again">
-            <input type="password" placeholder="비밀번호를 입력해주세요."/>
+            <input type="password" placeholder="비밀번호를 다시 입력해주세요." id="user_pw_chk"/>
         </div>
         <p id="wrongPw"></p>
         <a href="/login">
             <button id="join">회원가입</button>
         </a>
+        <hr>
     </div>
 
 </body>
