--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <!--  open graph  -->
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="bookReview"/>
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="모두의 책 리뷰"/>
     <meta property="og:description" content=""/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
