--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -9,7 +9,7 @@
     <!--  open graph  -->
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="bookReview"/>
-    <meta property="og:title" content="모두의 책 리뷰"/>
+    <meta property="og:title" content=""/>
     <meta property="og:description" content=""/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
@@ -58,20 +58,19 @@
     <div class="join-form">
         <p class="title">모두의 책 리뷰에 오신 것을 환영합니다.</p>
         <div id="id">
-            <input type="text" placeholder="아이디를 입력해주세요." id="user_id" autocomplete="off"/>
+            <input type="text" placeholder="아이디를 입력해주세요."/>
         </div>
         <p id="wrongId"></p>
-        <hr>
         <div id="pw">
-            <input type="password" placeholder="비밀번호를 입력해주세요." id="user_pw"/>
+            <input type="password" placeholder="비밀번호를 입력해주세요."/>
         </div>
         <div id="pw_again">
-            <input type="password" placeholder="비밀번호를 다시 입력해주세요." id="user_pw_chk"/>
+            <input type="password" placeholder="비밀번호를 입력해주세요."/>
         </div>
         <p id="wrongPw"></p>
-        <button id="join">회원가입</button>
-
-        <hr>
+        <a href="/login">
+            <button id="join">회원가입</button>
+        </a>
     </div>
 
 </body>
