--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <!--  open graph  -->
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="bookReview"/>
-    <meta property="og:title" content="모두의 책 리뷰"/>
+    <meta property="og:title" content=""/>
     <meta property="og:description" content=""/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content=""/>
@@ -67,7 +67,7 @@
         </div>
 
         <button id="login">로그인</button>
-        <hr>
+
         <div class="login_bottom">
             <a href="/joinMem">회원가입</a>
             <a href="javascript:void(0)">아이디찾기</a>
