--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -50,7 +50,8 @@
             <div class="main_menu">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
                 <a class="prefer" href="/main_page">추천리스트</a>
-                <a class="sign_in" href="javascript:void(0)">{{ user_id }}님 환영합니다.</a>
+                <a class="login_no" href="/login">로그인</a>
+                <a class="login_yes" href="javascript:void(0)">{{ user_id }}님 환영합니다.</a>
                 <a class="join_mem" href="/">로그아웃</a>
             </div>
         </div>
