--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <a href="/">모두의 책 리뷰</a>
             </div>
             <div class="main_menu">
-                <a class="bestS" href="/javascript:void(0)">베스트셀러</a>
+                <a class="bestS" href="/bestSeller">베스트셀러</a>
                 <a class="prefer" href="/main_page">추천리스트</a>
                 <a class="sign_in" href="/login">로그인</a>
                 <a class="join_mem" href="/joinMem">회원가입</a>
