--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -39,20 +39,21 @@
 <div class="wrap container">
     <div class="nav-bar">
         <div class="center">
-            <a class="mainPage" href="/main_page">
+            <a class="mainPage" href="/">
                 <img src="../static/image/book_logo.png" alt="book_logo"/>
             </a>
 
             <div class="title">
-                <a href="/main_page">모두의 책 리뷰</a>
+                <a href="/">모두의 책 리뷰</a>
             </div>
 
             <div class="main_menu">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
-                <a class="prefer" href="/main_page">추천리스트</a>
+                <a class="prefer" href="/">추천리스트</a>
                 <a class="login_no" href="/login">로그인</a>
                 <a class="login_yes" href="javascript:void(0)">{{ user_id }}님 환영합니다.</a>
-                <a class="join_mem" href="/">로그아웃</a>
+                <a class="join_mem login_yes" href="/">로그아웃</a>
+                <a class="join_mem login_no" href="/">회원가입</a>
             </div>
         </div>
     </div>
