--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -48,7 +48,7 @@
 
             <div class="main_menu">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
-                <a class="prefer" href="/main_page">추천리스트</a>
+                <a class="prefer" href="/">추천리스트</a>
                 <a class="sign_in" href="/login">로그인</a>
                 <a class="join_mem" href="/joinMem">회원가입</a>
             </div>
