--- a/static/css/joinMem.css
+++ b/static/css/joinMem.css
@@ -91,21 +91,28 @@ p {
     margin: auto;
     font-size: 15px;
     color: #444;
-    padding:15px;
+    padding: 15px;
     position: relative;
 }
 
-.nav-bar .center .main_menu > a::before {
-    content:'';
-    border-right:1px solid #444;
-    height: 15px;
-    position: absolute;
-    right:0;
+.nav-bar .center .main_menu > a:hover {
+    text-decoration: underline;
 }
 
-.nav-bar .center .main_menu > a:last-child::before {
-    content:'';
-    border:0;
+.nav-bar .center .main_menu > a::before {
+    content: '';
+    border-right: 1px solid #777;
+    height: 15px;
+    position: absolute;
+    right: 0;
+}
+
+.nav-bar .center .main_menu > a:first-child::before {
+    content: '';
+    border-left: 1px solid #777;
+    height: 15px;
+    position: absolute;
+    left:0;
 }
 
 /* login form */
