--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,11 @@
     <link rel="stylesheet" href="../static/css/main.css"/>
     <script defer src="../static/js/main.js"></script>
 
+    {#  favicon  #}
     <link rel="icon" href="../static/image/book_logo.png"/>
+
+    {#  material-icons  #}
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
     <title>책리뷰</title>
 </head>
@@ -46,19 +50,23 @@
             </div>
             <div class="main_menu">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
-                <a class="prefer" href="/main_page">추천리스트</a>
-                <a class="sign_in" href="/login">로그인</a>
-                <a class="join_mem" href="/joinMem">회원가입</a>
+                <a class="prefer" href="/">추천리스트</a>
+                <a class="login_no" href="/login">로그인</a>
+                <a class="login_yes" href="javascript:void(0)">{{ user_id }}님 환영합니다.</a>
+                <a class="join_mem login_no" href="/">회원가입</a>
+                <a class="join_mem login_yes" href="/">로그아웃</a>
             </div>
         </div>
 
     </div>
 
-    <div class="review">
+    <div class="review" autocomplete="false">
         <input type="text" placeholder="제목" id="reviewTitle"/>
         <textarea type="text" placeholder="등록하고싶은 책의 리뷰를 작성해주세요." id="reviewMemo"></textarea>
-        <input type="text" placeholder="등록하고싶은 책의 url 주소를 입력하세요." id="reviewURL"/>
+        <input type="text" placeholder="등록하고싶은 책의 URL을 작성해주세요." id="reviewURL"/>
+
         <button class="upload_review">등록하기!</button>
+        <span class="material-icons review_close">edit_off</span>
     </div>
     <button class="review_button" href="javascript:void(0)">책 등록하기</button>
 
