--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!--  css & js -->
+    <link rel="stylesheet" href="../static/css/bestSeller.css"/>
     <link rel="stylesheet" href="../static/css/main.css"/>
+
     <script defer src="../static/js/main.js"></script>
 
     {#  google-fonts-BnW-HM  #}
@@ -82,6 +84,7 @@
         <div class="book-review-contents">
 
             {% for row in rows %}
+
                 {% set id = row['id'] %}
                 {% set title = row['title'] %}
                 {% set image = row['image'] %}
@@ -89,24 +92,63 @@
                 {% set url = row['url'] %}
                 {% set reviewMemo = row['reviewMemo'] %}
                 {% set reviewTitle = row['reviewTitle'] %}
-                <div class="userSelect">
+                <div class="userSelect" id="book{{loop.index}}" onclick="select_userbook(this.id)">
                     <img class="book_img" src="{{ image }}"/>
                     <div class="book_title">{{ title }}</div>
                     <hr>
                     <div class="book_reviewTitle">{{ desc }}</div>
-
                 </div>
-                <div id="userSelect_click">
-                    <img class="book_img" src="{{ image }}"/>
-                    <textarea type="text" id="reviewMemo"></textarea>
-                    <input type="text" placeholder="등록하고싶은 책의 url 주소를 입력하세요." id="reviewURL"/>
-                    <button class="select_close">닫기</button>
-                </div>
-
-
-
             {% endfor %}
         </div>
+
+
+
+        <div id="modal" class="modal-overlay" style="display: none">
+            <div class="modal-window">
+                <div class="modal-float">
+                    <div class="content">
+                        <div class="title">
+                            <h4 id="modal_title">책이름</h4>
+                        </div>
+                        <div>
+                            <img id="modal_img_url" class="modal-image" src="">
+                            <div class="modal-bookinfo">
+                                <p id="modal_author" class="modal-text-margin">저자</p>
+                                <p id="modal_publisher" class="modal-text-margin">출판사</p>
+                                <p id="modal_publishdate" class="modal-text-margin">출간일</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review">
+                        <div>
+                            <div>유저이름</div>
+                            <div>리뷰내용</div>
+                            <input id="reviews" class="input" type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-float">
+                    <div class="modal-review-container"  >
+                        <div id="modal-reviews">
+                            <div class="modal-review-textbox">
+                                <td>유저이름</td>
+                                <td>리뷰안녕하세요 책 정말 잘 익었습니다</td>
+                            </div>
+                        </div>
+                        <div style="clear: both"></div>
+                        <input type="text" id="review_text" class="modal-review-input">
+                        <button id="send_review" onclick="send_review()">작성</button>
+                    </div>
+                </div>
+                <div style="clear: both"></div>
+            </div>
+            <button class="btn" onclick="modal_close()">닫기</button>
+        </div>
+
+
+
+
+
     </div>
 </div>
 
