회원가입 기능 수정

--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -56,7 +56,8 @@
                 </div>
             <div class="main_menu">
                 <a class="login_no" href="/login">로그인</a>
-                <a class="login_yes" href="javascript:void(0)" id="login_id">{{ user_id }}<span>님 환영합니다</span></a>
+                <a class="login_yes" href="javascript:void(0)" id="login_id">{{ user_id }}<span>님 환영합니다.</span></a>
+                <a class="join_mem login_no" href="/">회원가입</a>
                 <a class="join_mem login_yes" href="/">로그아웃</a>
             </div>
         </div>
