--- a/static/css/bestSeller.css
+++ b/static/css/bestSeller.css
@@ -44,13 +44,15 @@ div{
 
 .book-box-bg{
     width: 100%;
-    background-color: blueviolet;
+    height: 2100px;
+    /*background-color: blueviolet;*/
     text-align: center;
-
     padding-left: 50px;
+    margin: 200px auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    border-left: 3px solid #b3c2e7;
+    border-right: 3px solid #b3c2e7;
+    border-radius: 10%;
 }
 
 .book-box{
@@ -160,6 +162,11 @@ input::-webkit-calendar-picker-indicator {
     text-align: center;
     float: left;
 }
+
+#modal .content .title #modal_img_url {
+    height: 150px;
+}
+
 
 #modal .btn{
     display: block;
