--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -108,8 +108,11 @@
                 </div>
             </div>
             <div style="clear: both"></div>
+            <div>
+                <button class="bestseller-close-btn" onclick="modal_close()">닫기</button>
+            </div>
         </div>
-        <button class="btn" onclick="modal_close()">닫기</button>
+
     </div>
 
 
