--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,6 +56,7 @@ input, button, textarea {
 
 .opacity-on {
     opacity: .4;
+    pointer-events: none;
 }
 
 .opacity-off {
@@ -383,18 +384,16 @@ input, button, textarea {
 
 #modal .userbook-close-btn{
     display: block;
-    margin: auto;
-    margin-top: 15px;
-
-    border-radius: 20px;
-    background:#1AAB8A;
-    color:#fff;
-    border:none;
-    border-radius: 20px;
-    height:40px;
-    font-size:1.6em;
-    padding:0 2em;
     cursor:pointer;
-    transition:800ms ease all;
-    outline:none;
+    font-size: 40px;
+    position: absolute;
+    top:0;
+    right: 0;
 }
+
+#modal {
+    opacity: 0;
+    visibility: hidden;
+    transition: .5s;
+}
+
