--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!--  css & js -->
-    <link rel="stylesheet" href="../static/css/bestSeller.css"/>
     <link rel="stylesheet" href="../static/css/main.css"/>
 
     <script defer src="../static/js/main.js"></script>
@@ -102,7 +101,7 @@
         </div>
     </div>
 
-    <div id="modal" class="modal-overlay">
+    <div id="modal" class="modal-overlay modal-hide">
         <div class="modal-window">
             <div class="modal-float">
                 <div class="content">
