--- a/static/css/main.css
+++ b/static/css/main.css
@@ -413,11 +413,11 @@ input, button, textarea {
     width: 100%;
     background-color: blueviolet;
     text-align: center;
-
     padding-left: 50px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    transition: .5s;
 }
 
 .book-box {
