--- a/static/css/main.css
+++ b/static/css/main.css
@@ -483,7 +483,7 @@ input, button, textarea {
 
 #modal.modal-overlay {
     position: fixed;
-    bottom: 0;
+    top: 200px;
     margin: auto;
 }
 
@@ -515,6 +515,8 @@ input, button, textarea {
     color: black;
     text-align: center;
     float: left;
+    position: absolute;
+    top:50px;
 }
 
 #modal .bestseller-close-btn {
@@ -555,11 +557,12 @@ input, button, textarea {
 }
 
 .modal-review-container {
-    width: 45%;
-    height: 400px;
+    width: 53%;
+    height: 90%;
     background-color: lightcyan;
     position: absolute;
-    top: 0;
+    top: 40px;
+    right: 0;
 }
 
 .modal-review-textbox {
