--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -45,7 +45,7 @@
     <title>모두의 책 리뷰</title>
 </head>
 <body>
-<div class="wrap container">
+<div class="wrap">
     <div class="nav-bar">
         <div class="center">
 
