메인페이지/ 베스트셀러페이지 UI 통일

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -418,25 +418,47 @@ input, button, textarea {
     transition: .5s;
     justify-content: center;
     position: absolute;
-    left:0;
+    left: 0;
     right: 0;
     border-left: 1px solid cornflowerblue;
     border-right: 1px solid cornflowerblue;
     border-radius: 10%;
 }
 
+.book-box-bg .book-box-info {
+    position: absolute;
+    top: -8px;
+    left: 0;
+    right: 0;
+    font-size: 80px;
+    font-family: 'Hi Melody', cursive;
+    background: linear-gradient(to right, white 0%, cornflowerblue 50%, white 100%);
+    text-shadow: 6px 6px 6px gray;
+    color: #eee;
+    transform: scale(0.8);
+}
+
 .book-box {
-    width: 180px;
-    height: 270px;
+    width: 240px;
+    height: 320px;
     text-align: center;
     display: block;
-    padding: 20px;
-    background-color: azure;
-    /*background-color: lightcyan;*/
-    border-radius: 20px;
+    border: 1px solid #999;
+    border-radius: 10%;
     float: left;
-    margin: 10px;
+    margin: 50px 28px;
     cursor: pointer;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.book-box:hover{
+    transform: scale(1.1);
+}
+
+.book-box > img {
+    width: 180px;
+    height: 240px;
 }
 
 .section {
@@ -521,7 +543,7 @@ input, button, textarea {
     text-align: center;
     float: left;
     position: absolute;
-    top:50px;
+    top: 50px;
 }
 
 #modal .bestseller-close-btn {
