--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -69,6 +69,7 @@
 
     <!--베스트셀러 책 리스트 출력-->
     <div class="book-box-bg" id="books">
+        <div class="book-box-info"> §§§ BESTSELLER 20 §§§</div>
     </div>
     <div style="clear: both"></div>
 
