--- a/templates/index.html
+++ b/templates/index.html
@@ -114,8 +114,10 @@
                             <p id="modal_author" class="modal-text-margin">저자</p>
                             <p id="modal_publisher" class="modal-text-margin">출판사</p>
                             <p id="modal_publishdate" class="modal-text-margin">출간일</p>
+                            <p><button onclick="delete_book()">책삭제</button></p>
                         </div>
                     </div>
+
                 </div>
                 <div class="review">
                     <div>
